# opencode-autocode

./: .gitignore  .opencode.db  ARCHITECTURE.md  ARCHITECTURE_DETAILED.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DESIRED_WORKFLOW.md  FEATURES.md  IGNORE_THIS.config.toml  LICENSE  Makefile  Makefile.forger  README.md  autocode.toml  build.rs  feature_list.json  forger.toml  goal.md  init.sh  logic_flow.json  opencode-progress.txt  opencode.json  session-ses_4fee.md  session-ses_4fef.md
.conductor/: product.md  tech_stack.md  workflow.md
.github/workflows/: regression-tests.yml  release.yml
analysis/: FINDINGS.md  PROGRESS.md  README.md  TASKLIST.md
docs/: DEVELOPMENT.md  INTERNAL_ARCHITECTURE.md  IPC_PROTOCOL.md  functions.txt  template_costs.md
docs/examples/: default_app_spec.md
forger/: go.mod  go.sum
forger/cmd/forger/: main.go
forger/templates/: index.json
logs_52316014291/: 0_regression-tests.txt
logs_52316014291/regression-tests/: 10_Fail on regressions.txt  19_Post Set up Rust.txt  1_Set up job.txt  20_Post Checkout code.txt  21_Complete job.txt  2_Checkout code.txt  3_Set up Rust.txt  4_Cache dependencies.txt  5_Run unit tests.txt  6_Run linting.txt  8_Upload regression test results.txt  system.txt
reference-files/: ref-links.md
reference-files/autonomous-coding/: agent.py  autonomous_agent_demo.py  progress.py  security.py
src/: autonomous.rs  check_dialoguer.rs  cli.rs  communication.rs  conductor.rs  config.rs  config_tui.rs  docs.rs  editor.rs  generator.rs  lib.rs  main.rs  regression.rs  scaffold.rs  spec.rs  template_xml.rs  templates.rs  theming.rs  tui.rs  updater.rs  utils.rs  validation.rs  verbalized_sampling.rs
src/autonomous/: alternative.rs  debug_logger.rs  decision.rs  display.rs  features.rs  git.rs  mod.rs  parallel.rs  runner.rs  security.rs  session.rs  settings.rs  stats.rs  supervisor.rs  templates.rs  verification.rs  verifier.rs  webhook.rs
src/cli/: handlers.rs  mod.rs
src/common/: errors.rs  logging.rs
src/conductor/: mod.rs  plan.rs
src/config/: autonomous.rs  environment.rs  mcp_loader.rs  mod.rs  project.rs
src/config_tui/: helpers.rs  mod.rs  models.rs  save.rs  sections.rs
src/db/: connection.rs  features.rs  instances.rs  knowledge.rs  meta.rs  mod.rs  query.rs  schema.rs  sessions.rs  test_utils.rs
src/ipc/: mod.rs  protocol.rs  server.rs
src/services/: mod.rs
src/tui/: actions.rs  components.rs  fullscreen.rs  generated.rs  inputs.rs  manual.rs  mod.rs  prompts.rs  stats.rs  theme.rs  validation.rs
src/web/: mod.rs  routes.rs  static_files.rs
templates/: AGENTS.md  approach_selector_prompt.md  approach_selector_prompt.xml  autocode-user.toml  forger-user.toml  generator_prompt.md  generator_prompt.xml  index.json  refine_prompt.md  refine_prompt.xml  verbalized_sampling_prompt.md  verbalized_sampling_prompt.xml
templates/commands/: auto-context.md  auto-context.xml  auto-continue-v2.md  auto-continue.md  auto-continue.xml  auto-enhance.md  auto-enhance.xml  auto-fix.md  auto-fix.xml  auto-init-v2.md  auto-init.md  auto-init.xml  auto-plan.md  auto-plan.xml
templates/core/: communication.md  database.md  database.xml  efficiency.xml  identity.md  identity.xml  mcp_guide.md  mcp_guide.xml  security.md  security.xml  signaling.md
templates/examples/: conductor.md  conductor.xml  config.md  config.xml  db_insert.md  db_insert.xml  db_query.md  db_query.xml  interactive.md  interactive.xml  spec.md  spec.xml  templates_guide.md  templates_guide.xml  tracks.md  tracks.xml  verify.md  verify.xml  vibe.md  vibe.xml  workflow.md  workflow.xml
templates/generator/: fix_malformed_xml.md  fix_malformed_xml.xml  subagent_prompt.md  subagent_prompt.xml
templates/modules/: go.md  javascript.md  javascript.xml  memory.md  memory.xml  recovery.md  rust.md  rust.xml  testing.md  testing.xml
templates/notifications/: webhook.json
templates/projects/: api-rest.md  cli-tool.md  cli-tool.xml  regression-strategy.md  regression-strategy.xml  web-app-fullstack.md  web-app-fullstack.xml
test-project/: .gitignore  opencode.json
tests/: handlebars_escaping.rs  integration.rs  robustness.rs
tests/regression/: Cargo.toml  MAINTENANCE.md  README.md  feature_list.json  run_regression_tests.sh
tests/regression/baselines/: generator_basic_baseline.json  spec_validation_baseline.json
tests/regression/config/: default.toml
tests/regression/results/: baseline_updates.md  detailed_report.md  results.json  summary.txt  summary_report.md
tests/regression/src/: automation.rs  config.rs  functional_tests.rs  integration_tests.rs  lib.rs  main.rs  runner.rs
tests/regression/test_cases/: cli_help.json  end_to_end_workflow.json  full_project_generation.json  generator_basic.json  spec_sanitization.json  spec_validation.json  template_processing.json
tui-go/: Makefile  README.md  go.mod
(+112 files in other folders)
