[workspace]
members = ["tests/regression"]

[package]
name = "opencode-autocode"
version = "0.5.0"
edition = "2021"
description = "Scaffold autonomous coding plugin for OpenCode"
authors = ["CodingInCarhartts"]
license = "MIT"


[[bin]]
name = "opencode-autocode"
path = "src/main.rs"

[dependencies]
# CLI - v4.5.53 (Nov 2025, no CVEs)
clap = { version = "4.5.53", features = ["derive"] }

# TUI - v0.30.0 (stable, no CVEs)
ratatui = "0.30.0"
crossterm = "0.29"

# Serialization - stable, no CVEs
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10+spec-1.1.0"

# Templating - v6.4.0 (latest stable, no CVEs)
handlebars = "6.4.0"

# Interactive prompts - v0.12.0 (2025, no CVEs)
dialoguer = { version = "0.12", features = ["fuzzy-select", "editor"] }
console = "0.16.2"

# Filesystem utilities
walkdir = "2.5.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Date/time for autonomous runner
chrono = "0.4.42"

# Ctrl+C signal handling
ctrlc = "3.4"

# XML parsing and diff generation (for spec validation)
quick-xml = "0.38.4"
similar = "2.7.0"

# SQLite database for progress tracking
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Self-update capability
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
] }

[dev-dependencies]
# Temporary files for testing
tempfile = "3.24.0"
