[workspace]
members = ["tests/regression"]

[package]
name = "opencode-forger"
version = "0.8.2"
edition = "2021"
description = "Scaffold autonomous coding plugin for OpenCode"
authors = ["CodingInCarhartts"]
license = "MIT"


[[bin]]
name = "opencode-forger"
path = "src/main.rs"

[dependencies]
# CLI - v4.5.53 (Nov 2025, no CVEs)
clap = { version = "4.5.53", features = ["derive"] }

# Serialization - stable, no CVEs
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"

# Templating - v6.4.0 (latest stable, no CVEs)
handlebars = "6.4.0"

# Interactive TUI - iocraft for beautiful terminal UI
iocraft = "0.7.16"
smol = "2.0"

# Filesystem utilities
walkdir = "2.5.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Date/time for autonomous runner
chrono = "0.4.42"

# Web Server - Actix Web (latest stable, no CVEs)
actix-web = "4.9.0"
actix-files = "0.6.6"
rust-embed = { version = "8.5.0", features = ["interpolate-folder-path"] }
mime_guess = "2.0.5"
open = "5.3.2"

# Ctrl+C signal handling
ctrlc = "3.4"

# XML parsing and diff generation (for spec validation)
quick-xml = "0.38.4"
similar = "2.7.0"

# SQLite database for progress tracking
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Self-update capability
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
] }
num_cpus = "1.17.0"

# Unix process control (for process group termination)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Temporary files for testing
tempfile = "3.24.0"
