[workspace]
members = ["tests/regression"]

[package]
name = "opencode-forger"
version = "0.10.0"
edition = "2021"
description = "Scaffold autonomous coding plugin for OpenCode"
authors = ["CodingInCarhartts"]
license = "MIT"

[dependencies]
# CLI - v4.5.53 (Nov 2025, no CVEs)
clap = { version = "4.5.53", features = ["derive"] }

# Serialization - stable, no CVEs
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
toml = "0.9.10"

# Templating - v6.4.0 (latest stable, no CVEs)
handlebars = "6.4.0"

# Interactive TUI - iocraft for beautiful terminal UI
iocraft = "0.7.16"
smol = "2.0"

# Filesystem utilities
walkdir = "2.5.0"

# Error handling
anyhow = "1.0.100"
thiserror = "2.0.17"

# Date/time for autonomous runner
chrono = "0.4.42"

# Ctrl+C signal handling
ctrlc = "3.4"

# XML parsing and diff generation (for spec validation)
quick-xml = "0.38.4"
similar = "2.7.0"

# SQLite database for progress tracking
rusqlite = { version = "0.38.0", features = ["bundled"] }

# Self-update capability
self_update = { version = "0.42.0", features = [
    "archive-tar",
    "compression-flate2",
] }
num_cpus = "1.17.0"
unicode-width = "0.2.0"
terminal_size = "0.3"


# Unix process control (for process group termination)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
# Temporary files for testing
tempfile = "3.24.0"
