[package]
name = "opencode-regression-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "opencode-regression-tests"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
walkdir = "2"
anyhow = "1"
tempfile = "3"